chore(data): retire legacy export paths